Fix tox to *actually* run the tests, fix on 2.7, remove dependency on pytz.

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,10 @@
 [tox]
 envlist = py27,py33,py34
 skipsdist = True
+
+[testenv]
+commands = {envpython} tests.py
+# TODO: Remove duplication of dependencies between setup.py and tox.ini.
+deps =
+    lxml>=3.3.3
+    future>=0.14.3
