Add GitLab continuous integration testing script to run tox tests.

--- a/tox.ini
+++ b/tox.ini
@@ -8,3 +8,5 @@ commands = {envpython} tests.py
 deps =
     lxml>=3.3.3
     future>=0.14.3
+# Use system-wide lxml if available to avoid building it.
+sitepackages=True
