--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py27,py33,py34
 skipsdist = True
 
 [testenv]
-commands = {envpython} tests.py
+commands = {envpython} -Wall tests.py
 # TODO: Remove duplication of dependencies between setup.py and tox.ini.
 deps =
     lxml>=3.3.3
