Require Python 3.6, switch to setup.cfg.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,py34
+envlist = py36
 skipsdist = True
 
 [testenv]
@@ -7,6 +7,5 @@ commands = {envpython} -Wall tests.py
 # TODO: Remove duplication of dependencies between setup.py and tox.ini.
 deps =
     lxml>=3.3.3
-    future>=0.14.3
 # Use system-wide lxml if available to avoid building it.
 sitepackages=True
