Move code to src directory.

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,7 @@
 [tox]
-envlist = py36
-skipsdist = True
+envlist = py{36,37,38,39}
+isolated_build = true
 
 [testenv]
-commands = {envpython} -Wall tests.py
-# TODO: Remove duplication of dependencies between setup.py and tox.ini.
-deps =
-    lxml>=3.3.3
-# Use system-wide lxml if available to avoid building it.
-sitepackages=True
+commands =
+    {envpython} -Wall tests.py
