--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,12 @@ classifiers =
     Programming Language :: Python :: 3
 
 [options]
+package_dir =
+    = src
 packages = find:
 python_requires = >=3.6
 install_requires =
     lxml>=3.3.3
+
+[options.packages.find]
+where = src
